<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulClaro"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MathRushPRO.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.MathRushPRO.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/imageView_Personaje"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:translationX="30dp"
        android:translationY="150dp"
        app:srcCompat="@drawable/centaur" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/bungee"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:textColor="@color/blanco"
        android:textColorHint="@color/blanco"
        android:textSize="24sp"
        android:translationX="50dp"
        android:translationY="530dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/boton"
        android:textSize="24sp"
        android:translationX="75dp"
        android:translationY="650dp"
        app:cornerRadius="50dp" />

    <TextView
        android:id="@+id/textView_BestScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rosa"
        android:fontFamily="@font/bungee"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/blanco"
        android:textSize="18sp"
        android:translationY="55dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>